--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a:-webkit-any-link {
 }
 a:hover {
   background: rgb(234, 234, 234);
-  padding:1rem
+  /* padding: 0.5rem; */
   text-decoration: underline 1px black;
 }
 
@@ -175,7 +175,7 @@ button:hover {
     font-family: Inter;
     font-size: 3rem;
     font-weight: 800;
-    line-height: 3.5rem;
+    /* line-height: 3rem; */
   }
 
   h2 {
@@ -198,7 +198,6 @@ button:hover {
   a:hover {
     background: rgb(234, 234, 234);
     /* text-decoration: underline 5px; */
-    
   }
   p {
     font-size: 1rem;
@@ -210,7 +209,6 @@ button:hover {
     margin: 3rem 0;
   }
   .nav-bar {
-    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -254,11 +252,17 @@ button:hover {
     top: 72px;
     left: 165px;
   }
+
+  ul {
+    list-style: none;
+  }
+
   li {
     display: inline;
     padding: 1rem;
   }
-  li:hover{
+
+  li:hover {
     display: inline;
     padding: 1rem;
     border-bottom: #00001a;
@@ -296,14 +300,13 @@ button:hover {
 
   .text {
     color: #c5c6ce;
-
     display: grid;
     padding: 1rem;
     gap: 1rem;
-    /* align-items: center; */
+    align-items: center;
     background: #00001a;
   }
-  
+
   .text-title {
     padding: 0;
   }
@@ -320,7 +323,7 @@ button:hover {
   .gallery-item-1,
   .gallery-item-2,
   .gallery-item-3 {
-    margin: 1rem;
+    padding: 1rem;
     display: grid;
     grid-template-columns: auto;
     grid-template-columns: auto 2fr;
